# Datavidia-2026

./: .gitignore  README.md  pyproject.toml
data/: sample_submission.csv
data/01-raw/ISPU/: data-indeks-standar-pencemar-udara-(ispu)-di-provinsi-dki-jakarta-2023-komponen-data.csv  data-indeks-standar-pencemar-udara-(ispu)-di-provinsi-dki-jakarta-komponen-data-2024.csv  data-indeks-standar-pencemar-udara-(ispu)-di-provinsi-dki-jakarta-komponen-data-2025.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2010-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2011-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2012-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2013-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2014-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2015-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2016-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2017-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2018-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2019-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2020-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2021-komponen-data.csv  indeks-standar-pencemaran-udara-(ispu)-tahun-2022-komponen-data.csv
data/01-raw/cuaca-harian/: cuaca-harian-dki1-bundaranhi.csv  cuaca-harian-dki2-kelapagading.csv  cuaca-harian-dki3-jagakarsa.csv  cuaca-harian-dki4-lubangbuaya.csv  (+1 more)
notebooks/: cleaning.ipynb  notebook.ipynb
(+29 files in other folders)
