[project]
name = "datavidia-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython<8.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas<3",
    "seaborn<0.13",
    "setuptools>=80.10.2",
    "ydata-profiling>=4.12.2",
]
